--- a/Dash_App/jbi100_app/assets/style.css
+++ b/Dash_App/jbi100_app/assets/style.css
@@ -343,3 +343,82 @@ body {
 #type-of-comparison .Select-value-label {
     color: white !important;
 }
+
+
+#pcp-attribute-1 .Select-control {
+    background-color: #111111 !important;
+    color:white;
+  }
+  
+#pcp-attribute-1 .Select-menu-outer {
+    background-color: rgb(25, 25, 25);
+    color: white;
+}
+
+/* changes the text color of input box */
+#pcp-attribute-1 .Select-value-label {
+    color: white !important;
+}
+
+
+#pcp-attribute-2 .Select-control {
+    background-color: #111111 !important;
+    color:white;
+  }
+  
+#pcp-attribute-2 .Select-menu-outer {
+    background-color: rgb(25, 25, 25);
+    color: white;
+}
+
+/* changes the text color of input box */
+#pcp-attribute-2 .Select-value-label {
+    color: white !important;
+}
+
+
+#pcp-attribute-3 .Select-control {
+    background-color: #111111 !important;
+    color:white;
+  }
+  
+#pcp-attribute-3 .Select-menu-outer {
+    background-color: rgb(25, 25, 25);
+    color: white;
+}
+
+/* changes the text color of input box */
+#pcp-attribute-3 .Select-value-label {
+    color: white !important;
+}
+
+#pcp-attribute-4 .Select-control {
+    background-color: #111111 !important;
+    color:white;
+  }
+  
+#pcp-attribute-4 .Select-menu-outer {
+    background-color: rgb(25, 25, 25);
+    color: white;
+}
+
+/* changes the text color of input box */
+#pcp-attribute-4 .Select-value-label {
+    color: white !important;
+}
+
+
+#keepers-or-players .Select-control {
+    background-color: #111111 !important;
+    color:white;
+  }
+  
+#keepers-or-players .Select-menu-outer {
+    background-color: rgb(25, 25, 25);
+    color: white;
+}
+
+/* changes the text color of input box */
+#keepers-or-players .Select-value-label {
+    color: white !important;
+}
